create type "public"."task_status" as enum ('pending', 'approved', 'rejected');

create table "public"."tasks" (
    "id" bigint generated by default as identity not null,
    "title" text not null,
    "points" bigint not null,
    "desc" text default ''::text,
    "created_at" timestamp with time zone not null default now(),
    "updated_at" timestamp with time zone not null default now()
);


create table "public"."user_tasks" (
    "user_id" uuid not null,
    "task_id" bigint not null,
    "status" task_status not null default 'pending'::task_status,
    "created_at" timestamp with time zone not null default now(),
    "updated_at" timestamp with time zone not null default now()
);


CREATE UNIQUE INDEX tasks_pkey ON public.tasks USING btree (id);

CREATE UNIQUE INDEX user_tasks_pkey ON public.user_tasks USING btree (user_id, task_id);

alter table "public"."tasks" add constraint "tasks_pkey" PRIMARY KEY using index "tasks_pkey";

alter table "public"."user_tasks" add constraint "user_tasks_pkey" PRIMARY KEY using index "user_tasks_pkey";

alter table "public"."user_tasks" add constraint "user_tasks_task_id_fkey" FOREIGN KEY (task_id) REFERENCES tasks(id) not valid;

alter table "public"."user_tasks" validate constraint "user_tasks_task_id_fkey";

alter table "public"."user_tasks" add constraint "user_tasks_user_id_fkey" FOREIGN KEY (user_id) REFERENCES auth.users(id) not valid;

alter table "public"."user_tasks" validate constraint "user_tasks_user_id_fkey";

grant delete on table "public"."tasks" to "anon";

grant insert on table "public"."tasks" to "anon";

grant references on table "public"."tasks" to "anon";

grant select on table "public"."tasks" to "anon";

grant trigger on table "public"."tasks" to "anon";

grant truncate on table "public"."tasks" to "anon";

grant update on table "public"."tasks" to "anon";

grant delete on table "public"."tasks" to "authenticated";

grant insert on table "public"."tasks" to "authenticated";

grant references on table "public"."tasks" to "authenticated";

grant select on table "public"."tasks" to "authenticated";

grant trigger on table "public"."tasks" to "authenticated";

grant truncate on table "public"."tasks" to "authenticated";

grant update on table "public"."tasks" to "authenticated";

grant delete on table "public"."tasks" to "service_role";

grant insert on table "public"."tasks" to "service_role";

grant references on table "public"."tasks" to "service_role";

grant select on table "public"."tasks" to "service_role";

grant trigger on table "public"."tasks" to "service_role";

grant truncate on table "public"."tasks" to "service_role";

grant update on table "public"."tasks" to "service_role";

grant delete on table "public"."user_tasks" to "anon";

grant insert on table "public"."user_tasks" to "anon";

grant references on table "public"."user_tasks" to "anon";

grant select on table "public"."user_tasks" to "anon";

grant trigger on table "public"."user_tasks" to "anon";

grant truncate on table "public"."user_tasks" to "anon";

grant update on table "public"."user_tasks" to "anon";

grant delete on table "public"."user_tasks" to "authenticated";

grant insert on table "public"."user_tasks" to "authenticated";

grant references on table "public"."user_tasks" to "authenticated";

grant select on table "public"."user_tasks" to "authenticated";

grant trigger on table "public"."user_tasks" to "authenticated";

grant truncate on table "public"."user_tasks" to "authenticated";

grant update on table "public"."user_tasks" to "authenticated";

grant delete on table "public"."user_tasks" to "service_role";

grant insert on table "public"."user_tasks" to "service_role";

grant references on table "public"."user_tasks" to "service_role";

grant select on table "public"."user_tasks" to "service_role";

grant trigger on table "public"."user_tasks" to "service_role";

grant truncate on table "public"."user_tasks" to "service_role";

grant update on table "public"."user_tasks" to "service_role";


