create table "public"."reset_password_tokens" (
    "id" bigint generated by default as identity not null,
    "created_at" timestamp with time zone not null default now(),
    "user_id" uuid not null,
    "token" text not null
);


CREATE UNIQUE INDEX reset_password_tokens_pkey ON public.reset_password_tokens USING btree (id);

alter table "public"."reset_password_tokens" add constraint "reset_password_tokens_pkey" PRIMARY KEY using index "reset_password_tokens_pkey";

alter table "public"."reset_password_tokens" add constraint "reset_password_tokens_user_id_fkey" FOREIGN KEY (user_id) REFERENCES auth.users(id) not valid;

alter table "public"."reset_password_tokens" validate constraint "reset_password_tokens_user_id_fkey";

grant delete on table "public"."reset_password_tokens" to "anon";

grant insert on table "public"."reset_password_tokens" to "anon";

grant references on table "public"."reset_password_tokens" to "anon";

grant select on table "public"."reset_password_tokens" to "anon";

grant trigger on table "public"."reset_password_tokens" to "anon";

grant truncate on table "public"."reset_password_tokens" to "anon";

grant update on table "public"."reset_password_tokens" to "anon";

grant delete on table "public"."reset_password_tokens" to "authenticated";

grant insert on table "public"."reset_password_tokens" to "authenticated";

grant references on table "public"."reset_password_tokens" to "authenticated";

grant select on table "public"."reset_password_tokens" to "authenticated";

grant trigger on table "public"."reset_password_tokens" to "authenticated";

grant truncate on table "public"."reset_password_tokens" to "authenticated";

grant update on table "public"."reset_password_tokens" to "authenticated";

grant delete on table "public"."reset_password_tokens" to "service_role";

grant insert on table "public"."reset_password_tokens" to "service_role";

grant references on table "public"."reset_password_tokens" to "service_role";

grant select on table "public"."reset_password_tokens" to "service_role";

grant trigger on table "public"."reset_password_tokens" to "service_role";

grant truncate on table "public"."reset_password_tokens" to "service_role";

grant update on table "public"."reset_password_tokens" to "service_role";


