create table "public"."product_updates" (
    "id" bigint generated by default as identity not null,
    "created_at" timestamp with time zone not null default now(),
    "product_id" bigint not null,
    "new_quantity" bigint not null
);


CREATE UNIQUE INDEX product_updates_pkey ON public.product_updates USING btree (id);

alter table "public"."product_updates" add constraint "product_updates_pkey" PRIMARY KEY using index "product_updates_pkey";

alter table "public"."product_updates" add constraint "product_updates_product_id_fkey" FOREIGN KEY (product_id) REFERENCES products(id) not valid;

alter table "public"."product_updates" validate constraint "product_updates_product_id_fkey";

grant delete on table "public"."product_updates" to "anon";

grant insert on table "public"."product_updates" to "anon";

grant references on table "public"."product_updates" to "anon";

grant select on table "public"."product_updates" to "anon";

grant trigger on table "public"."product_updates" to "anon";

grant truncate on table "public"."product_updates" to "anon";

grant update on table "public"."product_updates" to "anon";

grant delete on table "public"."product_updates" to "authenticated";

grant insert on table "public"."product_updates" to "authenticated";

grant references on table "public"."product_updates" to "authenticated";

grant select on table "public"."product_updates" to "authenticated";

grant trigger on table "public"."product_updates" to "authenticated";

grant truncate on table "public"."product_updates" to "authenticated";

grant update on table "public"."product_updates" to "authenticated";

grant delete on table "public"."product_updates" to "service_role";

grant insert on table "public"."product_updates" to "service_role";

grant references on table "public"."product_updates" to "service_role";

grant select on table "public"."product_updates" to "service_role";

grant trigger on table "public"."product_updates" to "service_role";

grant truncate on table "public"."product_updates" to "service_role";

grant update on table "public"."product_updates" to "service_role";


